--- a/src/index.css
+++ b/src/index.css
@@ -17,15 +17,25 @@
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 } */
-/* @media only screen and (min-width: 640px) {
-  .animated {
-    width: 200px;
-    height: 200px;
-  }
-} */
+
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 15px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, .5);
+  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+
 .animated {
-  width: 90px;
-  height: 90px;
+  width: 100px;
+  height: 100px;
 }
 
 @media only screen and (min-width: 768px) {
